# tegdb

./: .gitignore  .markdownlint.yml  .release.toml  AGENTS.md  ARCHITECTURE.md  BENCHMARKS_README.md  BENCHMARK_FAIRNESS_IMPROVEMENTS.md  BINARY_SERIALIZATION_SUCCESS.md  COMPACTION_TEST_GUIDE.md  CONTRIBUTING.md  CORRECTED_PERFORMANCE_ANALYSIS.md  Cargo.toml  DATABASE_DESIGN.md  EMBED_FUNCTION.md  EXPLICIT_TRANSACTION_IMPLEMENTATION.md  EXPLICIT_TRANSACTION_IMPLEMENTATION_COMPLETE.md  FIX_DEV_FEATURE_TESTS.md  GENERIC_REFACTORING_ANALYSIS.md  GENERIC_REFACTORING_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  NEXT_STEPS_VECTOR_SEARCH.md  OLLAMA_CHATBOT_README.md  PARSER_OPTIMIZATION_RECOMMENDATIONS.md  PLATFORM_SPECIFIC_REFACTOR_GUIDE.md  PREALLOCATION_IMPLEMENTATION.md  QUERY_OPTIMIZER_PERFORMANCE_ANALYSIS.md  QUERY_PLANNER_FINAL_ANALYSIS.md  QUERY_PLANNER_IMPLEMENTATION_COMPLETE.md  QUERY_PLANNER_INTEGRATION_COMPLETE.md  README.md  REPL_DESIGN.md  SQL_IMPLEMENTATION_SUMMARY.md  SQL_PARSER_GUIDE.md  SQL_QUERY_OPTIMIZER_IMPLEMENTATION.md  STREAMING_API_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION_COMPLETE.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  (+40 more)
.github/: instructions
.github/workflows/: rust.yml  test.yml
benches/: bottleneck_analysis.rs  database_benchmark.rs  database_vs_sqlite_benchmark.rs  engine_basic_benchmark.rs  engine_benchmark.rs  engine_seq_benchmark.rs  engine_vs_transaction_comparison.rs  fixed_length_format_benchmark.rs  focused_planner_benchmark.rs  lazy_storage_benchmark.rs  limit_optimization_benchmark.rs  native_row_format_benchmark.rs  parser_benchmark.rs  parser_optimized_benchmark.rs  planner_optimization_benchmark.rs  pure_rollback.rs  query_optimizer_benchmark.rs  query_prepared_breakdown.rs  rollback_detailed.rs  rpc_vs_file_sql_benchmark.rs  simple_planner_test.rs  sled_benchmark.rs  storage_format_benchmark.rs  streaming_performance_benchmark.rs  transaction_begin_scaling.rs  transaction_benchmark.rs  vector_index_performance_benchmark.rs  vector_search_benchmark.rs
browser/: Cargo.toml  index.html
browser/src/: lib.rs
capnp/: log.capnp
docs/: API_CONSISTENCY_SOLUTION.md  BATCH_REMOVAL_SUMMARY.md  BENCHMARK_REFACTORING_SUMMARY.md  DATABASE_BENCHMARK_COMPARISON.md  DATABASE_BENCHMARK_RESULTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  IOT_ANALYSIS.md  IOT_IMPLEMENTATION.md  NATIVE_ROW_FORMAT_IMPLEMENTATION.md  PARSER_OPTIMIZATION_RECOMMENDATIONS.md  PARSER_PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PERFORMANCE_TESTING_GUIDE.md  PLANNER_IMPLEMENTATION_SUMMARY.md  PLANNER_INTEGRATION_COMPLETE.md  QUERY_PLANNER_ARCHITECTURE.md  README.md  SERIALIZATION_FIX_PLAN.md  SQL_PARSER_GUIDE.md  STREAMING_API_INTEGRATION_COMPLETE.md  SYNC_TRADE_OFF_DECISION.md  TEST_COVERAGE_SUMMARY.md  api.md  architecture.md  cli.md  configuration.md  contributing.md  deployment.md  design.md  examples.md  extensions.md  faq.md  limits.md  operations.md  sql.md  troubleshooting.md
examples/: arithmetic_expressions.rs  basic_usage.rs  complete_sql_demo.rs  composite_pk_demo.rs  comprehensive_database_test.rs  comprehensive_storage_test.rs  concurrent_usage.rs  debug_columns.rs  debug_embed.rs  debug_parameter_binding.rs  debug_parser.rs  debug_schema.rs  debug_schema_order.rs  dual_storage_demo.rs  embed_demo.rs  executor_validation_test.rs  explicit_transaction_comprehensive_demo.rs  explicit_transaction_demo.rs  extension_demo.rs  extension_template.rs  fixed_length_format_demo.rs  interactive_personal_chatbot.rs  iot_demo.rs  iot_optimization_demo.rs  iot_storage_benchmark.rs  manual_chatbot.rs  minimal_debug.rs  native_format_test.rs  native_key_benchmark.rs  native_row_format_benchmark.rs  ollama_chatbot_demo.rs  ollama_chatbot_simple.rs  ollama_chatbot_working.rs  ollama_semantic_search_demo.rs  performance_demo.rs  personal_knowledge_db.rs  pk_lookup_profile.rs  planner_demo.rs  planner_usage_demo.rs  preallocate_demo.rs  (+30 more)
scripts/: install-hooks.sh  pre-commit.sh
src/: catalog.rs  commands.rs  connections.rs  constants.rs  database.rs  database_fixed.rs  db.rs  diskio.rs  embedding.rs  engine.rs  engine.rs.new  enhanced_plan_executor.rs  error.rs  executor.rs  extension.rs  intent.rs  lib.rs  lock_manager.rs  log.rs  log_capnp.rs  logger.rs  main.rs  native_row_format.rs  optimized_serialization.rs  parser.rs  plan_executor.rs  planner.rs  protocol_utils.rs  query.rs  query_processor.rs  serialization.rs  server.rs  snapshot.rs  snapshot_generator.rs  sql.rs  sql_executor.rs  sql_utils.rs  storage.rs  storage_engine.rs  storage_format.rs  (+6 more)
src/backends/: browser_log_backend.rs  file_log_backend.rs  mod.rs  rpc_log_backend.rs
src/storage/: browser_backend.rs  file_backend.rs  mod.rs
src/tegstream/: config.rs  parser.rs  s3_backend.rs  state.rs  tailer.rs
src/tgstream/: config.rs  error.rs  mod.rs  parser.rs  restore.rs  s3_backend.rs
tests/: README.md  arithmetic_edge_cases_test.rs  arithmetic_expressions_test.rs  arithmetic_parser_tests.rs  backend_compatibility_test.rs  cli_tests.rs  commit_marker_tests.rs  concurrent_tests.rs  convert_test_example.sh  database_tests.rs  drop_table_integration_test.rs  engine_test.rs  engine_tests.rs  executor_acid_tests.rs  executor_acid_tests_new.rs  executor_acid_tests_old.rs  executor_validation_test.rs  explicit_transaction_integration_tests.rs  header_tests.rs  high_level_api_performance_test.rs  integration_vector_features_test.rs  mod.rs  parse_embed_unit_test.rs  parser_tests.rs  planner_database_integration_test.rs  planner_integration_test.rs  query_iterator_test.rs  read_only_transaction_test.rs  reproduction_log_growth.rs  rpc_log_backend_test.rs  schema_performance_test.rs  schema_persistence_test.rs  simplified_api_test.rs  sql_integration_tests.rs  sql_integration_tests_updated.rs  sql_parser_tests.rs  storage_format_tests.rs  tegstream_integration_minio.rs  tegstream_parser_tests.rs  tegstream_preallocate_test.rs  (+13 more)
tests/arithmetic/: arithmetic_edge_cases_test.rs  arithmetic_expressions_test.rs  arithmetic_parser_tests.rs  (+1 more)
(+53 files in other folders)
