[package]
name = "tegdb"
version = "0.3.0"
edition = "2021"

authors = ["Jack Yu"]

documentation = "https://docs.rs/tegdb"
homepage = "https://github.com/minifish-org/tegdb"
repository = "https://github.com/minifish-org/tegdb.git"

description = "The name TegridyDB (short for TegDB) is inspired by the Tegridy Farm in South Park and tries to correct some of the wrong database implementations, such as null support, implicit conversion support, etc."
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"  # File locking for native backend
nom = "8.0.0"   # SQL parser
fastrand = "2.0.1"  # Fast random number generation for vector indexing
serde_json = "1.0"  # For Ollama JSON parsing (also used by tgstream)

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }  # Argument parsing
rustyline = "14.0"  # REPL functionality
crossterm = "0.27"  # Terminal I/O
const_format = "0.2"  # Compile-time string formatting for help messages

# Cloud sync dependencies (for tgstream)
aws-sdk-s3 = { version = "1" }
aws-config = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
# Note: serde_json is already a dependency above
toml = { version = "0.8" }
flate2 = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3" }


[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
sled = "0.34.7" # for performance comparison
rusqlite = "0.37.0"
rand = "0.8.5" # for random number generation in examples
once_cell = "1.19"  # For static initialization in tests
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Common dev dependencies that work on all platforms
tempfile = "3.20.0"



[[bench]]
name = "engine_basic_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "engine_seq_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "parser_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "parser_optimized_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "transaction_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "transaction_begin_scaling"
harness = false
required-features = ["dev"]

[[bench]]
name = "rollback_detailed"
harness = false
required-features = ["dev"]

[[bench]]
name = "pure_rollback"
harness = false
required-features = ["dev"]

[[bench]]
name = "engine_vs_transaction_comparison"
harness = false
required-features = ["dev"]

[[bench]]
name = "database_vs_sqlite_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "planner_optimization_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "simple_planner_test"
harness = false
required-features = ["dev"]

[[bench]]
name = "focused_planner_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "limit_optimization_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "bottleneck_analysis"
harness = false
required-features = ["dev"]

[[bench]]
name = "storage_format_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "fixed_length_format_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "vector_search_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "vector_index_performance_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "lazy_storage_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "native_row_format_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "query_optimizer_benchmark"
harness = false
required-features = ["dev"]

[[bench]]
name = "query_prepared_breakdown"
harness = false
required-features = ["dev"]

[[bench]]
name = "streaming_performance_benchmark"
harness = false
required-features = ["dev"]

[[bin]]
name = "tg"
path = "src/bin/tg.rs"

[[bin]]
name = "tgstream"
path = "src/bin/tgstream.rs"



[features]
# Feature to expose low-level API for examples, benchmarks, and advanced users
dev = []

# Enable dev feature for docs.rs documentation
[package.metadata.docs.rs]
features = ["dev"]

# Test configurations with dev feature requirement
[[test]]
name = "engine_tests"
path = "tests/integration/engine_tests.rs"
required-features = ["dev"]

[[test]]
name = "explicit_transaction_integration_tests"
path = "tests/integration/explicit_transaction_integration_tests.rs"
required-features = ["dev"]

[[test]]
name = "sql_integration_tests"
path = "tests/integration/sql_integration_tests.rs"
required-features = ["dev"]

# Removed sql_parser_tests - file deleted

[[test]]
name = "transaction_parsing_tests"
path = "tests/integration/transaction_parsing_tests.rs"
required-features = ["dev"]

[[test]]
name = "transaction_tests"
path = "tests/integration/transaction_tests.rs"
required-features = ["dev"]

[[test]]
name = "drop_table_integration_test"
path = "tests/integration/drop_table_integration_test.rs"
required-features = ["dev"]



# Removed database_tests - file deleted

[[test]]
name = "query_iterator_test"
path = "tests/integration/query_iterator_test.rs"
required-features = ["dev"]

[[test]]
name = "read_only_transaction_test"
path = "tests/integration/read_only_transaction_test.rs"
required-features = ["dev"]

[[test]]
name = "schema_persistence_test"
path = "tests/integration/schema_persistence_test.rs"
required-features = ["dev"]

[[test]]
name = "simplified_api_test"
path = "tests/integration/simplified_api_test.rs"
required-features = ["dev"]

[[test]]
name = "backend_compatibility_test"
path = "tests/integration/backend_compatibility_test.rs"
required-features = ["dev"]

[[test]]
name = "commit_marker_tests"
path = "tests/integration/commit_marker_tests.rs"
required-features = ["dev"]

[[test]]
name = "integration_vector_features_test"
path = "tests/integration_vector_features_test.rs"
required-features = ["dev"]

[[test]]
name = "planner_database_integration_test"
path = "tests/integration/planner_database_integration_test.rs"
required-features = ["dev"]

[[test]]
name = "high_level_api_performance_test"
path = "tests/performance/high_level_api_performance_test.rs"
required-features = ["dev"]

[[test]]
name = "arithmetic_expressions_test"
path = "tests/arithmetic/arithmetic_expressions_test.rs"
required-features = ["dev"]

[[test]]
name = "arithmetic_edge_cases_test"
path = "tests/arithmetic/arithmetic_edge_cases_test.rs"
required-features = ["dev"]

[[test]]
name = "arithmetic_parser_tests"
path = "tests/arithmetic/arithmetic_parser_tests.rs"
required-features = ["dev"]

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"
required-features = ["dev"]

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"
required-features = ["dev"]

[[test]]
name = "tgstream_parser_tests"
path = "tests/tgstream_parser_tests.rs"

[[test]]
name = "tgstream_state_tests"
path = "tests/tgstream_state_tests.rs"

[[test]]
name = "tgstream_integration_minio"
path = "tests/tgstream_integration_minio.rs"

[[test]]
name = "preallocate_memory_test"
path = "tests/integration/preallocate_memory_test.rs"
required-features = ["dev"]

[[test]]
name = "preallocate_disk_test"
path = "tests/integration/preallocate_disk_test.rs"
required-features = ["dev"]

[[test]]
name = "header_version_test"
path = "tests/integration/header_version_test.rs"
required-features = ["dev"]

[[test]]
name = "tgstream_preallocate_test"
path = "tests/tgstream_preallocate_test.rs"
required-features = ["dev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true  # Enable debug symbols for flamegraph
lto = true    # Link-time optimization for better performance
codegen-units = 1  # Single codegen unit for better optimization