[package]
name = "tegdb"
version = "0.5.0"
edition = "2021"

authors = ["Jack Yu"]

documentation = "https://docs.rs/tegdb"
homepage = "https://github.com/minifish-org/tegdb"
repository = "https://github.com/minifish-org/tegdb.git"

description = "The name TegridyDB (short for TegDB) is inspired by the Tegridy Farm in South Park and tries to correct some of the wrong database implementations, such as null support, implicit conversion support, etc."
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = { version = "0.4.3", optional = true }  # File locking for native backend
nom = "8.0.0"   # SQL parser
fastrand = "2.0.1"  # Fast random number generation for vector indexing
serde_json = "1.0"  # For Ollama JSON parsing (also used by tgstream)
capnp = { version = "0.20", optional = true }
capnp-rpc = { version = "0.20", optional = true }
capnp-futures = { version = "0.20", optional = true }
futures = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# CLI dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
rustyline = { version = "14.0", optional = true }
crossterm = { version = "0.27", optional = true }
const_format = { version = "0.2", optional = true }

# Cloud sync dependencies (for tgstream)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Extension system dependencies
libloading = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
sled = "0.34.7"
rusqlite = "0.37.0"
rand = "0.8.5"
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.20.0"

[build-dependencies]
capnpc = "0.20"

[[bench]]
name = "engine_basic_benchmark"
harness = false

[[bench]]
name = "engine_seq_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "parser_optimized_benchmark"
harness = false

[[bench]]
name = "transaction_benchmark"
harness = false

[[bench]]
name = "transaction_begin_scaling"
harness = false

[[bench]]
name = "rollback_detailed"
harness = false

[[bench]]
name = "pure_rollback"
harness = false

[[bench]]
name = "engine_vs_transaction_comparison"
harness = false

[[bench]]
name = "database_vs_sqlite_benchmark"
harness = false

[[bench]]
name = "planner_optimization_benchmark"
harness = false

[[bench]]
name = "simple_planner_test"
harness = false

[[bench]]
name = "focused_planner_benchmark"
harness = false

[[bench]]
name = "limit_optimization_benchmark"
harness = false

[[bench]]
name = "bottleneck_analysis"
harness = false

[[bench]]
name = "storage_format_benchmark"
harness = false

[[bench]]
name = "fixed_length_format_benchmark"
harness = false

[[bench]]
name = "vector_search_benchmark"
harness = false

[[bench]]
name = "vector_index_performance_benchmark"
harness = false

[[bench]]
name = "lazy_storage_benchmark"
harness = false

[[bench]]
name = "native_row_format_benchmark"
harness = false

[[bench]]
name = "query_optimizer_benchmark"
harness = false

[[bench]]
name = "query_prepared_breakdown"
harness = false

[[bench]]
name = "streaming_performance_benchmark"
harness = false

[[bin]]
name = "tg"
path = "src/bin/tg.rs"
required-features = ["repl"]

[[bin]]
name = "tgstream"
path = "src/bin/tgstream.rs"
required-features = ["cli", "tgstream"]

[[bin]]
name = "tglogd"
path = "src/bin/tglogd.rs"
required-features = ["rpc"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true  # Enable debug symbols for flamegraph
lto = true    # Link-time optimization for better performance
codegen-units = 1  # Single codegen unit for better optimization

[features]
# Default behavior matches the current repository behavior: ship CLI tools,
# cloud streaming sync support, dynamic extensions, and file locking.
default = ["host"]

# Full host-oriented build (matches the historical default behavior).
host = ["repl", "tgstream", "extensions-dylib", "file-locking"]

# Embedded / unikernel-oriented preset.
#
# Note: Cargo features can only enable capabilities, not disable them. To get a
# truly minimal build, use `--no-default-features --features embedded` (or `hermit`).
embedded = []

# Alias preset for Hermit/unikernel experiments.
hermit = ["embedded"]

# Minimal clap-based CLI support (used by tg and tgstream binaries).
cli = ["dep:clap"]

# Interactive REPL CLI (tg).
repl = ["cli", "dep:rustyline", "dep:crossterm", "dep:const_format"]

# Cloud sync / streaming backup (tgstream module + tgstream binary).
tgstream = [
  "dep:tokio",
  "dep:aws-sdk-s3",
  "dep:aws-config",
  "dep:serde",
  "dep:toml",
  "dep:flate2",
  "dep:chrono",
]

# Cap'n Proto RPC log backend and log server.
rpc = [
  "dep:tokio",
  "dep:capnp",
  "dep:capnp-rpc",
  "dep:capnp-futures",
  "dep:futures",
  "dep:tokio-util",
]

# Dynamic extension loading via dlopen/LoadLibrary.
extensions-dylib = ["dep:libloading"]

# File-based backend locking using fs2.
file-locking = ["dep:fs2"]
