[package]
name = "tegdb-browser-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tegdb = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Storage",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlDivElement",
] }
wasm-bindgen-futures = "0.4"

[dependencies.wasm-bindgen-test]
version = "0.3"
